--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 /* Estilos para o logo do projeto */
 .logo img {
     max-height: 50px;
