--- a/templates/header.html
+++ b/templates/header.html
@@ -5,12 +5,12 @@
     </div>
     <nav>
       <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="sobre.html">Sobre nós</a></li>
-        <li><a href="carteiras.html">Carteiras Bitcoin</a></li>
-        <li><a href="cadastro.html">Cadastre seu estabelecimento</a></li>
-        <li><a href="materiais.html">Materiais</a></li>
-        <li><a href="estabelecimentos.html">Estabelecimentos</a></li>
+        <li><a href="/">Início</a></li>
+        <li><a href="/sobre">Sobre nós</a></li>
+        <li><a href="/carteiras">Carteiras Bitcoin</a></li>
+        <li><a href="/cadastro">Cadastre seu estabelecimento</a></li>
+        <li><a href="/materiais">Materiais</a></li>
+        <li><a href="/estabelecimentos">Estabelecimentos</a></li>
       </ul>
     </nav>
   </div>
