padronização e correção das imagens em geral

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <header>
   <div class="header-container">
     <div class="logo">
-      <img src="img/logos/logo.png" alt="Logo Aceita Bitcoin?" style="width: 100px; height: auto; align-self: center;">
+      <img src="static/img/logo_aceita_bitcoin_1200_290.png" alt="Logo Aceita Bitcoin?" style="width: 200px; height: auto; align-self: center;">
     </div>
     <nav>
       <ul>
