--- a/templates/materiais.html
+++ b/templates/materiais.html
@@ -34,7 +34,7 @@
           </p>
         </div>
         <div class="intro-image">
-          <img src="img/materiais/fredericas-btc.jpg" alt="Exemplo de uso do adesivo Bitcoin na Frederica's"
+          <img src="static/img/materiais_sucesso_fredericas.png" alt="Exemplo de uso do adesivo Bitcoin na Frederica's"
             style="width: 50%; height: auto; align-self: center; object-fit: contain;">
         </div>
       </div>
@@ -146,8 +146,9 @@
           <div class="material-card-header">
             <h4 class="material-card-title">Adesivo "Aceita Bitcoin?"</h4>
           </div>
+
           <div class="material-card-content">
-            <img src="img/materiais/adesivo-novo.jpeg" alt="Adesivo Aceita Bitcoin?" class="material-preview">
+            <img src="static/img/adesivo_aceitamos_bitcoin_1200_310.png" alt="Adesivo Aceitamos Bitcoin" class="material-preview">
             <div class="material-card-description">
               Adesivo para ser colocado na entrada do estabelecimento, indicando que o local aceita pagamentos em
               Bitcoin. Formato 30cm x 7,5cm.
@@ -166,7 +167,7 @@
             <h4 class="material-card-title">Folder Informativo</h4>
           </div>
           <div class="material-card-content">
-            <img src="img/materiais/adesivo-novo.jpeg" alt="Folder Informativo" class="material-preview">
+            <img src="static/img/logo_aceita_bitcoin_1200_290.png" alt="Folder Informativo" class="material-preview">
             <div class="material-card-description">
               Folder com informações sobre o projeto "Aceita Bitcoin?" e os benefícios de aceitar pagamentos em Bitcoin.
               Inclui instruções para começar e carteiras recomendadas.
@@ -185,7 +186,7 @@
             <h4 class="material-card-title">Cartaz para Estabelecimento</h4>
           </div>
           <div class="material-card-content">
-            <img src="img/materiais/adesivo-novo.jpeg" alt="Cartaz para Estabelecimento" class="material-preview">
+            <img src="static/img/logo_aceita_bitcoin_1200_290.png" alt="Cartaz para Estabelecimento" class="material-preview">
             <div class="material-card-description">
               Cartaz para ser colocado no estabelecimento, destacando os benefícios do pagamento em Bitcoin e com espaço
               para QR code personalizado.
@@ -204,7 +205,7 @@
             <h4 class="material-card-title">Guia Rápido para Comerciantes</h4>
           </div>
           <div class="material-card-content">
-            <img src="img/materiais/fredericas-btc.jpg" alt="Guia Rápido para Comerciantes" class="material-preview">
+            <img src="static/img/materiais_sucesso_fredericas.png" alt="Guia Rápido para Comerciantes" class="material-preview">
             <div class="material-card-description">
               Guia passo a passo para comerciantes que desejam aceitar Bitcoin em seus estabelecimentos, com exemplo
               real da Frederica's.
