--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -37,7 +37,7 @@
           </p>
         </div>
         <div class="intro-image">
-          <img src="img/bitcoin-adoption.jpg" alt="Adoção de Bitcoin">
+          <img src="static/img/sobre_adocao_bitcoin.jpg" alt="Adoção de Bitcoin">
         </div>
       </div>
 
