--- a/templates/carteiras.html
+++ b/templates/carteiras.html
@@ -21,7 +21,7 @@
       <div class="wallet-cards">
         <div class="wallet-card">
           <div class="wallet-header">
-            <img src="img/logos/coinos.png" alt="Coinos" class="wallet-logo">
+            <img src="static/img/logo_coinos.png" alt="Coinos" class="wallet-logo">
             <div class="wallet-name">Coinos</div>
             <div class="wallet-type">Web & Mobile</div>
           </div>
@@ -58,7 +58,7 @@
 
         <div class="wallet-card">
           <div class="wallet-header">
-            <img src="img/logos/wos.jpg" alt="Wallet of Satoshi" class="wallet-logo">
+            <img src="static/img/logo_wos.png" alt="Wallet of Satoshi" class="wallet-logo">
             <div class="wallet-name">Wallet of Satoshi</div>
             <div class="wallet-type">Mobile</div>
           </div>
@@ -95,7 +95,7 @@
 
         <div class="wallet-card">
           <div class="wallet-header">
-            <img src="img/logos/strike.png" alt="Strike" class="wallet-logo">
+            <img src="static/img/logo_strike.png" alt="Strike" class="wallet-logo">
             <div class="wallet-name">Strike</div>
             <div class="wallet-type">Mobile</div>
           </div>
