--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,10 @@
 <header>
   <div class="header-container">
     <div class="logo">
-      <img src="static/img/logo_aceita_bitcoin_1200_290.png" alt="Logo Aceita Bitcoin?" style="width: 200px; height: auto; align-self: center;">
+      <a href="/">
+        <img src="static/img/logo_aceita_bitcoin_1200_290.png" alt="Logo Aceita Bitcoin?"
+          style="width: 200px; height: auto; align-self: center;">
+      </a>
     </div>
     <nav>
       <ul>
