--- a/templates/carteiras.html
+++ b/templates/carteiras.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Carteiras Bitcoin - Aceita Bitcoin?</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="static/css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="static/css/carteiras.css">
+  <link rel="icon" href="static/img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -357,7 +358,7 @@
       });
     });
   </script>
-  <script src="js/load-header-and-footer.js"></script>
+  <script src="static/js/load-header-and-footer.js"></script>
   
 </body>
 
