--- a/templates/estabelecimentos.html
+++ b/templates/estabelecimentos.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Estabelecimentos - Aceita Bitcoin?</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="static/css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="icon" href="static/img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -69,7 +70,7 @@
       }
     });
   </script>
-  <script src="js/load-header-and-footer.js"></script>
+  <script src="static/js/load-header-and-footer.js"></script>
   
 </body>
 
